# internal/service/web/api/user.go
@@ -4,9 +4,9 @@ import (
 	"cronJob/internal/global"
 	"cronJob/internal/models"
 	"cronJob/internal/schemas"
+	"errors"
 	"github.com/gin-gonic/gin"
 	"github.com/gogf/gf/v2/frame/g"
-	"golang.org/x/crypto/bcrypt"
 )
 
 type UserApi struct{}
@@ -16,6 +16,8 @@ func UserRegister(group *gin.RouterGroup) {
 	group.GET("/list", service.GetList)
 	group.POST("/edit", service.EditUser)
 	group.GET("/view", service.GetUser)
+	group.POST("/del", service.DelUser)
+	group.POST("/update-password", service.UpdatePassword)
 }
 
 // GetList godoc
@@ -99,15 +101,8 @@ func (u *UserApi) EditUser(c *gin.Context) {
 		user.UserName = params.UserName
 		user.NickName = params.NickName
 		user.Email = params.Email
-		hashedPassword, err := bcrypt.GenerateFromPassword([]byte(params.Password), bcrypt.DefaultCost)
-		if err != nil {
-			tx.Rollback()
-			schemas.ResponseError(c, schemas.UserCreateFailed, err)
-			return
-		}
-		user.Password = string(hashedPassword)
-		//user.RoleId = 2
-		_, err = user.Create(tx)
+		user.Password = params.Password
+		_, err := user.Create(tx)
 		if err != nil {
 			tx.Rollback()
 			schemas.ResponseError(c, schemas.UserCreateFailed, err)
@@ -144,4 +139,83 @@ func (u *UserApi) GetUser(c *gin.Context) {
 	}
 
 	schemas.ResponseSuccess(c, user)
+}
+
+// DelUser godoc
+// @Summary 删除用户
+// @Description 删除用户
+// @Tags 用户管理
+// @Security ApiKeyAuth
+// @ID /api/user/del
+// @Accept json
+// @Produce json
+// @Param data body schemas.DelUserParams true "body"
+// @Success 200 {object} schemas.Response{data=string} "success"
+// @Router /api/user/del [post]
+func (u *UserApi) DelUser(ctx *gin.Context) {
+	params := &schemas.DelUserParams{}
+	if err := params.BindValidParam(ctx); err != nil {
+		schemas.ResponseError(ctx, schemas.UserSearchParamInvalid, err)
+		return
+	}
+	user := &models.User{}
+	tx := global.GormDB.Begin()
+	_, err := user.Delete(tx, params.ID)
+	if err != nil {
+		tx.Rollback()
+		schemas.ResponseError(ctx, schemas.UserDeleteFailed, err)
+		return
+	}
+	tx.Commit()
+	schemas.ResponseSuccess(ctx, nil)
+}
+
+// UpdatePassword godoc
+// @Summary 更新密码
+// @Description 更新密码
+// @Tags 用户管理
+// @Security ApiKeyAuth
+// @ID /api/user/update-password
+// @Accept json
+// @Produce json
+// @Param data body schemas.UpdatePasswordInput true "body"
+// @Success 200 {object} schemas.Response{data=string} "success"
+// @Router /api/user/update-password [post]
+func (u *UserApi) UpdatePassword(ctx *gin.Context) {
+	params := &schemas.UpdatePasswordInput{}
+	if err := params.BindValidParam(ctx); err != nil {
+		schemas.ResponseError(ctx, schemas.UserSearchParamInvalid, err)
+		return
+	}
+
+	// 检查密码是否一致
+	if params.NewPass != params.ConfirmPassword {
+		schemas.ResponseError(ctx, schemas.UserUpdateFailed, errors.New("两次密码不一致"))
+		return
+	}
+
+	tx := global.GormDB.Begin()
+	user := &models.User{}
+	if err := user.FindOne(tx, g.Map{
+		"username": params.UserName,
+	}); err != nil {
+		tx.Rollback()
+		schemas.ResponseError(ctx, schemas.UserNotExist, err)
+		return
+	}
+
+	// 检查旧密码是否正确
+	if !user.CheckPassword(params.Password) {
+		schemas.ResponseError(ctx, schemas.UserPasswordError, errors.New("旧密码错误"))
+		return
+	}
+
+	_, err := user.UpdatePassword(tx, params.NewPass)
+	if err != nil {
+		tx.Rollback()
+		schemas.ResponseError(ctx, schemas.UserUpdateFailed, err)
+		return
+	}
+	tx.Commit()
+	schemas.ResponseSuccess(ctx, nil)
 }
